--- a/src/Components/UI/Custombootstrap.scss
+++ b/src/Components/UI/Custombootstrap.scss
@@ -1,4 +1,11 @@
-$dropdown-bg: rgb(33, 37, 41);
+$dropdown-bg: #292121;
+$dropdown-border-color:  rgba(54, 162, 235, 1);
+$dropdown-border-radius:.4rem;
+$dropdown-link-hover-color:red;
+$dropdown-link-hover-bg: #37383a;
+$dropdown-dark-link-hover-color:red;
+
+
 
 $accordion-bg: rgb(33, 37, 41);
 $accordion-color: rgb(255, 255, 255);
