--- a/src/Components/SubPages/inventory.css
+++ b/src/Components/SubPages/inventory.css
@@ -37,3 +37,33 @@
   text-align: left;
   vertical-align: top;
 }
+
+.Top_key {
+  left: 1rem;
+  bottom: 0vh;
+  position: fixed;
+  text-align: center;
+  color: rgba(54, 162, 235, 1);
+}
+.Top_key img {
+  width: 50px;
+}
+
+.anchorBtn {
+  margin: 1rem 0 1rem 0;
+  font: inherit;
+  font-size: 0.88rem;
+  font-weight: 600;
+  border: 1px solid rgba(54, 162, 235, 1);
+  border-radius: 0.5rem;
+  background: rgba(54, 162, 235, 0.2);
+  color: rgb(255, 255, 255);
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  transition: color 250ms ease-in, background 250ms ease-in;
+ 
+}
+
+.anchorBtn:hover {
+  color: rgba(54, 162, 235, 1);
+}
