--- a/src/Components/SubPages/inventory.css
+++ b/src/Components/SubPages/inventory.css
@@ -61,9 +61,38 @@
   padding: 0.5rem 1rem;
   cursor: pointer;
   transition: color 250ms ease-in, background 250ms ease-in;
- 
 }
 
 .anchorBtn:hover {
   color: rgba(54, 162, 235, 1);
+}
+
+.dropzone {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  border-width: 2px;
+  border-radius: 2px;
+  border-color: #eeeeee;
+  border-style: dashed;
+  background-color: #fafafa;
+  color: #bdbdbd;
+  outline: none;
+  transition: border 0.24s ease-in-out;
+}
+
+
+.customeTheme {
+  color: #000000 !important;
+  border: 1px solid rgba(54, 162, 235, 1)!important;
+  border-radius: 0.5rem!important;
+  background: rgba(124, 203, 255, 0.8)!important;
+}
+.customeTheme.place-top:after {
+  
+  border: 1px solid rgba(54, 162, 235, 1)!important;
+  border-radius: 0.5rem!important;
+  background: rgba(124, 203, 255, 0.8)!important;
 }
