--- a/src/Components/UI/Card.module.css
+++ b/src/Components/UI/Card.module.css
@@ -65,6 +65,21 @@
   opacity: 0.85;
 }
 
+.topTwitter {
+  background-color: rgb(0, 0, 5);
+  background-image: url("../../Images/pexels-polina-zimmerman-3782235.webp");
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover;
+  opacity: 0.85;
+  /* filter: hue-rotate(180deg);
+  -webkit-filter: hue-rotate(180deg);
+  -moz-filter: hue-rotate(180deg);
+  -o-filter: hue-rotate(180deg);
+  -ms-filter: hue-rotate(180deg); */
+  
+}
+
 .topchartdetail {
   background-color: rgb(37, 54, 106);
   background-position: center; /* Center the image */
@@ -101,7 +116,7 @@
   /* height: 22rem;
   max-height: 22rem;
   min-height: 22rem; */
-  height: minmax(22rem,fit-content);
+  height: minmax(22rem, fit-content);
 }
 
 .chartdisplay {
@@ -109,10 +124,22 @@
   display: block;
   z-index: 999;
 }
+
 .chartdisplayWif {
   overflow: hidden;
   display: block;
   z-index: 999;
+  color: white;
+  text-align: left;
+  padding: 0rem 1rem 2rem 0rem;
+}
+.chartdisplayWif li {
+  overflow: hidden;
+  display: block;
+  z-index: 999;
+  color: white;
+  text-align: left;
+  padding: 0rem 1rem 0rem 0rem;
 }
 
 .infodisplay {
@@ -150,13 +177,10 @@
   list-style: circle;
 }
 
-.OtherText li{
+.OtherText li {
   color: white;
   list-style: circle;
 }
-
-
-
 
 @media screen and (max-width: 50rem) {
   .clipboardinside {
@@ -186,7 +210,7 @@
   .chartdisplayWif {
     font-size: 10px;
     padding-left: 0px;
-    margin-left:0px;
+    margin-left: 0px;
   }
   .regixText {
     width: fit-content;
@@ -222,3 +246,5 @@
     overflow: auto;
   }
 }
+
+
