--- a/src/Components/SubPages/infoCard.module.css
+++ b/src/Components/SubPages/infoCard.module.css
@@ -11,6 +11,7 @@
   height: fit-content;
 }
 
+
 .mycard {
   border: 1px solid rgba(54, 162, 235, 1);
   border-radius: 10px;
@@ -124,4 +125,28 @@ meter::-webkit-meter-optimum-value {
     gap: 1rem;
     grid-template-columns: 6fr 1fr;
   }
+  .tableContainer {
+    color: antiquewhite;
+    flex: 1 1 24%;
+    min-width: 20ch;
+    height: fit-content;
+  }
+  .tableContainerdragndrop{
+    color: antiquewhite;
+    flex: 1 1 24%;
+    min-width: 20ch;
+    max-width: fit-content;
+    height: fit-content;
+  }
 }
+@media screen and (max-width: 50rem) {
+
+  .tableContainerdragndrop{
+    color: antiquewhite;
+    flex: 1 1 24%;
+    min-width: 20ch;
+    max-width: fit-content;
+    height: fit-content;
+  }
+}
+  
