--- a/src/about.module.css
+++ b/src/about.module.css
@@ -177,6 +177,7 @@ a {
   transition: color 250ms ease-in, background 250ms ease-in;
   min-width: 8rem;
   align-items: right;
+  width: 100%;
 }
 
 .cta:hover,
@@ -226,5 +227,19 @@ a {
   }
   .watermatkchilds:nth-child(3) {
     width: 2fr;
+  }
+  .cta {
+    font: inherit;
+    font-weight: 500;
+    border: 1px solid rgb(54, 162, 235);
+    background: rgb(37, 53, 104, 0.5);
+    color: rgb(251, 251, 251);
+    padding: 0.25rem 1rem;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: color 250ms ease-in, background 250ms ease-in;
+    min-width: 8rem;
+    align-items: right;
+    width: 20vw;
   }
 }
