--- a/src/Components/SubPages/inventory.css
+++ b/src/Components/SubPages/inventory.css
@@ -39,14 +39,15 @@
 }
 
 .Top_key {
-  left: 1rem;
+  left: 10px;
   bottom: 0vh;
   position: fixed;
   text-align: center;
-  color: rgba(54, 162, 235, 1);
+  z-index: 99999 !important;
 }
 .Top_key img {
-  width: 50px;
+  width: 30px;
+  z-index: 99999 !important;
 }
 
 .anchorBtn {
@@ -83,16 +84,14 @@
   transition: border 0.24s ease-in-out;
 }
 
-
 .customeTheme {
   color: #000000 !important;
-  border: 1px solid rgba(54, 162, 235, 1)!important;
-  border-radius: 0.5rem!important;
-  background: rgba(124, 203, 255, 0.8)!important;
+  border: 1px solid rgba(54, 162, 235, 1) !important;
+  border-radius: 0.5rem !important;
+  background: rgba(124, 203, 255, 0.8) !important;
 }
 .customeTheme.place-top:after {
-  
-  border: 1px solid rgba(54, 162, 235, 1)!important;
-  border-radius: 0.5rem!important;
-  background: rgba(124, 203, 255, 0.8)!important;
+  border: 1px solid rgba(54, 162, 235, 1) !important;
+  border-radius: 0.5rem !important;
+  background: rgba(124, 203, 255, 0.8) !important;
 }
