--- a/src/Components/SubPages/progressbar.css
+++ b/src/Components/SubPages/progressbar.css
@@ -26,11 +26,10 @@
   transition: 1s ease 0.3s;
 }
 
-.progress-done p{
-position: absolute;
-left:5rem;
-top:.2rem;
-
+.progress-done p {
+  position: absolute;
+  left: 5rem;
+  top: 0.2rem;
 }
 
 .emptycontainer {
@@ -91,10 +90,8 @@ li {
   width: min(100%);
 }
 
-
-.tablecontrol{
- 
- display: grid;
+.tablecontrol {
+  display: grid;
   gap: 5px;
   justify-items: center;
   align-items: center;
@@ -120,11 +117,19 @@ li {
   border-radius: 50%;
   border: 4px rgba(54, 162, 235, 1) solid;
 }
-section { width: 80%;}
+section {
+  width: 80%;
+}
 
-
+.progress-icon {
+  position: fixed;
+  width: 30px;
+  height: 30px;
+  left: 10px;
+  top: 6rem;
+  z-index: 10;
+}
 @media (min-width: 50rem) {
-
   .emptybigcontainer {
     background-color: rgba(54, 162, 235, 1);
     font-size: medium;
@@ -144,12 +149,12 @@ section { width: 80%;}
     padding: 0.8rem;
     opacity: 1;
     text-align: left;
-    height: 5rem;
+    height: fit-content;
     font-variant-numeric: tabular-nums;
     padding-left: 5%;
   }
   .infoandpichrt {
-    grid-template-columns: repeat(1,3fr 1fr);
+    grid-template-columns: repeat(1, 3fr 1fr);
   }
   .infoandpichrt :last-child {
     border: 4px rgb(22, 160, 252) solid;
@@ -167,15 +172,21 @@ section { width: 80%;}
     border: 4px rgba(54, 162, 235, 1) solid;
   }
   .infoWhatif {
-    grid-template-columns:repeat(1,1fr 3fr);
+    grid-template-columns: repeat(1, 1fr 3fr);
   }
-.tablecontrol{
-  display:flex;
-  gap:1rem;
-  justify-content:space-evenly;
-  width:fit-content;
+  .tablecontrol {
+    display: flex;
+    gap: 1rem;
+    justify-content: space-evenly;
+    width: fit-content;
+  }
+
+  .progress-icon {
+    position: fixed;
+    top: 4rem;
+    left: 15px;
+    width: 80px;
+    height: 80px;
+    z-index: 10;
+  }
 }
-
-
-}
-
