--- a/src/Components/UI/Custombootstrap.scss
+++ b/src/Components/UI/Custombootstrap.scss
@@ -5,6 +5,7 @@ $dropdown-link-hover-color:red;
 $dropdown-link-hover-bg: #37383a;
 $dropdown-dark-link-hover-color:red;
 
+$pagination-color: #000000!important;
 
 
 $accordion-bg: rgb(33, 37, 41);
