--- a/src/Components/Styles/UsersList.module.css
+++ b/src/Components/Styles/UsersList.module.css
@@ -154,6 +154,7 @@
   padding: 0 0 0 1rem;
   background-color: rgb(102, 192, 252);
   font-weight: 600;
+  text-align: left;
 
   /* border: 1px solid rgba(54, 162, 235, 1); */
 }
