--- a/src/Components/Styles/infoCard.module.css
+++ b/src/Components/Styles/infoCard.module.css
@@ -7,10 +7,11 @@
 .tableContainer {
   color: antiquewhite;
   flex: 1 1 24%;
-  min-width: 20ch;
+  min-width: 100%;
   height: fit-content;
+  width: 100%;
+  max-width: 100%;
 }
-
 
 .mycard {
   border: 1px solid rgba(54, 162, 235, 1);
@@ -110,9 +111,18 @@ meter::-webkit-meter-optimum-value {
   gap: 1rem;
   overflow: hidden;
 }
+.tableContainerdragndrop {
+  color: antiquewhite;
+  flex: 1 1 24%;
+  min-width: 80%;
+  max-width: 80%;
+  height: fit-content;
+}
+tableContainerdragndrop *{
+  word-break: break-word;
+}
 
-
-@media (min-width: 50rem) {
+@media (min-device-width: 45rem) {
   .mycard {
     min-width: 100%;
     max-width: 100%;
@@ -131,22 +141,17 @@ meter::-webkit-meter-optimum-value {
     min-width: 20ch;
     height: fit-content;
   }
-  .tableContainerdragndrop{
+  .tableContainerdragndrop {
     color: antiquewhite;
     flex: 1 1 24%;
-    min-width: 20ch;
-    max-width: fit-content;
+    min-width: 100%;
+    max-width: 100%;
     height: fit-content;
   }
+  tableContainerdragndrop *{
+    word-break: break-word;
+  }
 }
-@media screen and (max-width: 50rem) {
+/* @media screen and (max-width: 50rem) {
 
-  .tableContainerdragndrop{
-    color: antiquewhite;
-    flex: 1 1 24%;
-    min-width: 20ch;
-    max-width: fit-content;
-    height: fit-content;
-  }
-}
-  
+} */
