--- a/src/Components/Styles/inventory.css
+++ b/src/Components/Styles/inventory.css
@@ -1,5 +1,3 @@
-
-
 .tg {
   border-collapse: collapse;
   border-color: #93a1a1;
@@ -55,15 +53,17 @@
 .anchorBtn {
   margin: 1rem 0 1rem 0;
   font: inherit;
-  font-size: 0.88rem;
+  font-size: 2.2vmin;
   font-weight: 600;
   border: 1px solid rgba(54, 162, 235, 1);
   border-radius: 0.5rem;
   background: rgba(54, 162, 235, 0.2);
   color: rgb(255, 255, 255);
-  padding: 0.5rem 1rem;
+  /* padding: 0.5rem 1rem; */
   cursor: pointer;
   transition: color 250ms ease-in, background 250ms ease-in;
+  text-align: center;
+  /* white-space: nowrap; */
 }
 
 .anchorBtn:hover {
@@ -98,4 +98,10 @@
   background: rgba(124, 203, 255, 0.8) !important;
 }
 
-
+@media screen and (min-width: 50rem) {
+  .anchorBtn {
+    margin: 1rem 0 1rem 0;
+    font: inherit;
+    font-size: 0.8rem;
+  }
+}
